<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayoutStyleHead"
    android:id="@+id/windowLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3" >

    <TextView
        style="@style/TextViewStyleTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_textview_height_middle"
        android:text="@string/title_name" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextViewStyleLarge"
            android:layout_width="@dimen/activity_textview_width_middle"
            android:layout_height="wrap_content"
            android:text="@string/Department_label" >
        </TextView>

        <TextView
            android:id="@+id/Department"
            style="@style/TextViewStyleLarge"
            android:layout_width="@dimen/activity_textview_width_long"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextViewStyleLarge"
            android:layout_width="@dimen/activity_textview_width_middle"
            android:layout_height="wrap_content"
            android:text="@string/WindowName_label" >
        </TextView>

        <TextView
            android:id="@+id/WindowName"
            style="@style/TextViewStyleLarge"
            android:layout_width="@dimen/activity_textview_width_long"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextViewStyleLarge"
            android:layout_width="@dimen/activity_textview_width_middle"
            android:layout_height="wrap_content"
            android:text="@string/windowid_label" >
        </TextView>

        <TextView
            android:id="@+id/windowid"
            style="@style/TextViewStyleLarge"
            android:layout_width="@dimen/activity_textview_width_long"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

</LinearLayout>